--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
   },
   "homepage": "https://github.com/marcobiedermann/url-shortener#readme",
   "devDependencies": {
+    "@types/express": "^4.17.11",
     "@types/node": "^14.14.31",
     "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.5"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
