--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "typescript": "^4.1.5"
   },
   "dependencies": {
+    "celebrate": "^13.0.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1"
   }
