--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/marcobiedermann/url-shortener#readme",
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.31",
     "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.5"
@@ -30,6 +31,8 @@
     "celebrate": "^13.0.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "helmet": "^4.4.1"
+    "helmet": "^4.4.1",
+    "morgan": "^1.10.0",
+    "winston": "^3.3.3"
   }
 }
