--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/marcobiedermann/url-shortener#readme",
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/http-errors": "^1.8.0",
     "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.31",
     "ts-node-dev": "^1.1.1",
@@ -32,6 +33,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.4.1",
+    "http-errors": "^1.8.0",
+    "http-status-codes": "^2.1.4",
     "morgan": "^1.10.0",
     "winston": "^3.3.3"
   }
