--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/marcobiedermann/url-shortener#readme",
   "devDependencies": {
+    "@types/compression": "^1.7.0",
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/http-errors": "^1.8.0",
@@ -31,6 +32,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "celebrate": "^13.0.4",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
