--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build": "tsc",
     "develop": "ts-node-dev src/index.ts",
+    "format": "prettier --write .",
     "start": "node dist/index.js"
   },
   "repository": {
@@ -26,6 +27,9 @@
     "@types/http-errors": "^1.8.0",
     "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.31",
+    "husky": "^5.1.1",
+    "prettier": "^2.2.1",
+    "pretty-quick": "^3.1.0",
     "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.5"
   },
