--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
+    "db:migrate": "sequelize db:migrate",
+    "db:seed": "sequelize db:seed",
     "develop": "ts-node-dev src/index.ts",
     "format": "prettier --write .",
     "start": "node dist/index.js"
@@ -27,9 +29,11 @@
     "@types/http-errors": "^1.8.0",
     "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.31",
+    "@types/validator": "^13.1.3",
     "husky": "^5.1.1",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
+    "sequelize-cli": "^6.2.0",
     "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.5"
   },
@@ -44,6 +48,9 @@
     "http-errors": "^1.8.0",
     "http-status-codes": "^2.1.4",
     "morgan": "^1.10.0",
+    "pg": "^8.5.1",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^6.5.0",
     "winston": "^3.3.3"
   }
 }
