--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-async-handler": "^1.1.4",
     "helmet": "^4.4.1",
     "http-errors": "^1.8.0",
     "http-status-codes": "^2.1.4",
