--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "http-errors": "^1.8.0",
     "http-status-codes": "^2.1.4",
     "morgan": "^1.10.0",
+    "nanoid": "^3.1.20",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.5.0",
