--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "db:seed": "sequelize db:seed",
     "develop": "ts-node-dev src/index.ts",
     "format": "prettier --write .",
+    "lint:js": "eslint '**/*.{js,jsx,ts,tsx}'",
+    "lint": "npm run lint:js",
     "start": "node dist/index.js"
   },
   "repository": {
@@ -30,12 +32,19 @@
     "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.31",
     "@types/validator": "^13.1.3",
+    "@typescript-eslint/eslint-plugin": "^4.15.2",
+    "@typescript-eslint/parser": "^4.15.2",
+    "eslint": "^7.20.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-prettier": "^3.3.1",
     "husky": "^5.1.1",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
     "sequelize-cli": "^6.2.0",
     "ts-node-dev": "^1.1.1",
-    "typescript": "^4.1.5"
+    "typescript": "^4.2.2"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
