--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/http-errors": "^1.8.0",
     "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.31",
+    "@types/swagger-ui-express": "^4.1.2",
     "@types/validator": "^13.1.3",
     "@typescript-eslint/eslint-plugin": "^4.15.2",
     "@typescript-eslint/parser": "^4.15.2",
@@ -62,6 +63,7 @@
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.5.0",
+    "swagger-ui-express": "^4.1.6",
     "winston": "^3.3.3"
   }
 }
