--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "db:migrate": "sequelize db:migrate",
     "db:seed": "sequelize db:seed",
-    "develop": "ts-node-dev src/index.ts",
+    "develop": "ts-node-dev --respawn --transpile-only src/index.ts",
     "format": "prettier --write .",
     "lint:js": "eslint '**/*.{js,jsx,ts,tsx}'",
     "lint": "npm run lint:js",
@@ -25,45 +25,45 @@
   },
   "homepage": "https://github.com/marcobiedermann/url-shortener#readme",
   "devDependencies": {
-    "@types/compression": "^1.7.0",
-    "@types/cors": "^2.8.10",
-    "@types/express": "^4.17.11",
-    "@types/http-errors": "^1.8.0",
-    "@types/morgan": "^1.9.2",
-    "@types/node": "^14.14.31",
-    "@types/swagger-ui-express": "^4.1.2",
-    "@types/validator": "^13.1.3",
-    "@typescript-eslint/eslint-plugin": "^4.15.2",
-    "@typescript-eslint/parser": "^4.15.2",
-    "eslint": "^7.20.0",
+    "@types/compression": "^1.7.2",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/http-errors": "^1.8.2",
+    "@types/morgan": "^1.9.3",
+    "@types/node": "^14.18.16",
+    "@types/swagger-ui-express": "^4.1.3",
+    "@types/validator": "^13.7.2",
+    "@typescript-eslint/eslint-plugin": "^4.33.0",
+    "@typescript-eslint/parser": "^4.33.0",
+    "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-prettier": "^3.3.1",
-    "husky": "^5.1.1",
-    "prettier": "^2.2.1",
-    "pretty-quick": "^3.1.0",
-    "sequelize-cli": "^6.2.0",
-    "ts-node-dev": "^1.1.1",
-    "typescript": "^4.2.2"
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^3.4.1",
+    "husky": "^5.2.0",
+    "prettier": "^2.6.2",
+    "pretty-quick": "^3.1.3",
+    "sequelize-cli": "^6.4.1",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.6.4"
   },
   "dependencies": {
-    "body-parser": "^1.19.0",
+    "body-parser": "^1.20.0",
     "celebrate": "^13.0.4",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "express-async-handler": "^1.1.4",
-    "helmet": "^4.4.1",
-    "http-errors": "^1.8.0",
-    "http-status-codes": "^2.1.4",
+    "dotenv": "^8.6.0",
+    "express": "^4.18.1",
+    "express-async-handler": "^1.2.0",
+    "helmet": "^4.6.0",
+    "http-errors": "^1.8.1",
+    "http-status-codes": "^2.2.0",
     "morgan": "^1.10.0",
-    "nanoid": "^3.1.31",
-    "pg": "^8.5.1",
-    "pg-hstore": "^2.3.3",
-    "sequelize": "^6.5.0",
-    "swagger-ui-express": "^4.1.6",
-    "winston": "^3.3.3"
+    "nanoid": "^3.3.3",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.19.0",
+    "swagger-ui-express": "^4.3.0",
+    "winston": "^3.7.2"
   }
 }
